fixError system; eeStorage fixed

--- a/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
+++ b/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
@@ -14,8 +14,14 @@
             >.error-box {
                 color: red;
             }
+
             >.warning-box {
                 color: orange;
+            }
+
+            .fix-button {
+                color: var(--text-color);
+                cursor: pointer;
             }
         }
     }
