--- a/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
+++ b/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
@@ -1,25 +1,32 @@
 .phase-cm-editor-container {
     .editable-block {
         border: 1px solid transparent;
-
-        &.error {
-            border-color: red;
-        }
-
-        &.warning {
-            border-color: orange;
-        }
+        margin: var(--main-gap) 0;
 
         >.corrects-container {
-            >.error-box {
-                color: red;
-            }
+            >.correct-box {
+                margin: 15px 5px;
+                padding: 10px;
+                border-radius: 10px;
 
-            >.warning-box {
-                color: orange;
+                &.error {
+                    color: red;
+                    background-color: rgba(255, 0, 0, .3);
+                }
+
+                &.warning {
+                    color: orange;
+                    background-color: rgba(255, 165, 0, .3);
+                }
+
+                &.unknown {
+                    color: cadetblue;
+                    background-color: rgba(0, 255, 255, .3);
+                }
             }
 
             .fix-button {
+                margin-top: 15px;
                 color: var(--text-color);
                 cursor: pointer;
             }
