--- a/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
+++ b/src/components/apps/cm/editor/phase-editor-container/PhaseCmEditorContainer.scss
@@ -5,7 +5,7 @@
 
         >.corrects-container {
             >.correct-box {
-                margin: 15px 5px;
+                margin: 15px 0;
                 padding: 10px;
                 border-radius: 10px;
 
