exer fixes, editors fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,11 @@ body {
   border: none;
 }
 
+.disabled {
+  opacity: .5;
+  pointer-events: none;
+}
+
 :not(svg) {
   box-sizing: border-box;
 }
