tuner app initialized

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -50,6 +50,12 @@
         }
     }
 
+    .app-container {
+        overflow: hidden;
+        position: relative;
+        height: 100vh;
+    }
+
     >.footer {
         position: absolute;
         bottom: var(--footer-bottom);
