category stack fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,6 +68,14 @@ input {
   font-family: var(--font-family);
 }
 
+.half-width {
+  width: 50%;
+}
+
+.half-height {
+  height: 50%;
+}
+
 .full-width {
   width: 100%;
 }
