--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -6,6 +6,15 @@
 
     height: 100vh;
     width: 100vw;
+    position: relative;
+    z-index: 100;
+
+    &.fullscreen {
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     .translation-screen-wrapper {
         position: relative;
@@ -27,6 +36,8 @@
             border: solid 1px transparent;
             font-size: 14px;
             overflow: hidden;
+            width: 100%;
+            height: 100%;
             border-radius: var(--radius);
 
             &.active {
@@ -119,20 +130,30 @@
     .fullscreen-translation {
         --safe-gap: 5%;
 
-        position: absolute;
         background: black;
-        top: 0;
-        left: 0;
         width: 100vw;
         height: 100vh;
         color: white;
         z-index: 1000;
+        transition: transform .1s;
+
+        &.rotate {
+            transform: rotate(90deg);
+            width: 100vh;
+            height: 100vw;
+
+            .translation-screen-wrapper-inner {
+                width: 100vh !important;
+                height: 100vw !important;
+            }
+        }
 
         >.bottom-area,
         >.top-area {
             position: absolute;
             width: 40%;
-            height: 40vh;
+            height: 40%;
+            cursor: pointer;
 
             &.left {
                 left: var(--safe-gap);
@@ -153,24 +174,43 @@
 
         >.center-area {
             position: absolute;
-            top: 0;
             width: 20%;
             left: 40%;
-            height: 100vh;
+            height: 40%;
+            cursor: pointer;
+
+            &.top {
+                top: 0;
+
+                .close-translation-button {
+                    top: -50px;
+
+                    &.show {
+                        top: 10px;
+                    }
+                }
+            }
+
+            &.bottom {
+                bottom: 0;
+
+                .close-translation-button {
+                    bottom: -50px;
+
+                    &.show {
+                        bottom: 10px;
+                    }
+                }
+            }
 
             .close-translation-button {
                 --svg-color: white;
 
-                position: relative;
-                top: -50px;
-                transition: top .4s;
+                position: absolute;
+                transition: top .4s, bottom .4s;
                 left: calc(50% - 24px / 2);
+                cursor: pointer;
                 z-index: 10000;
-
-                &.show {
-                    top: 10px;
-                    cursor: pointer;
-                }
             }
         }
     }
