--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -72,51 +72,8 @@
 
 
 
+
 /*
-    .chord-zero-line {
-        fill: none;
-        stroke: #ffdfad;
-        stroke-width: 3px;
-    }
-
-    .chord-string {
-        fill: none;
-        stroke: #f2b148;
-    }
-
-    .chord-lad {
-        fill: none;
-        stroke: #f4f0e8;
-    }
-
-    .chord-application {
-        margin-top: 1em;
-    }
-
-    .chord-board {
-        position: relative;
-        background-color: #634008;
-        display: inline-block;
-        vertical-align: middle;
-    }
-
-    .chord-point {
-        stroke-linecap: round;
-        stroke-width: 12px;
-        stroke: red;
-
-        &.shadow {
-            stroke: grey;
-        }
-    }
-
-    .first-lad-counter {
-        font-size: 1em;
-        margin-right: .5em;
-        display: inline-block;
-        vertical-align: middle;
-    }
-
     .region-editor {
 
         .region-editor-block {
@@ -205,7 +162,7 @@
         height: 1em;
         vertical-align: middle;
     }
-
+/*
 
     .com-editor-wrapper {
         .com-editor {
@@ -252,16 +209,4 @@
         }
     }
 
-    .execution-item {
-        &.separated {
-            margin-top: 50px;
-        }
-
-        &.other-author {
-            border-top: 5px dashed var(--color-far);
-            margin-top: 30px;
-            padding-top: 30px;
-        }
-    }
-
-}/* */
+/* */
