--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -38,7 +38,7 @@
             overflow: hidden;
             width: 100%;
             height: 100%;
-            border-radius: var(--radius);
+            border-radius: var(--radius);;
 
             &.active {
                 border-color: var(--color-far);
@@ -128,7 +128,12 @@
     }
 
     .fullscreen-translation {
-        --safe-gap: 5%;
+        --safe-gap: 50px;
+        --block-height: 40%;
+        --center-width: 20%;
+        --half-safe-gap: calc(var(--safe-gap) / 3);
+        --block-width: calc((100% - var(--safe-gap) * 2 - var(--center-width)) / 2);
+        --center-left: calc(var(--safe-gap) + var(--block-width));
 
         background: black;
         width: 100vw;
@@ -148,12 +153,82 @@
             }
         }
 
+        &.open-info {
+            --first-bg: #999;
+            --second-bg: grey;
+
+            .close-info-button {
+                opacity: 1;
+                pointer-events: all;
+            }
+
+            .open-info-button {
+                opacity: 0;
+            }
+
+            .translation-screen-wrapper-inner {
+                filter: blur(5px);
+            }
+
+            >.info-area {
+                color: white;
+            }
+
+            >.center-area {
+                &.top {
+                    --gradient-color: var(--first-bg);
+                    background: repeating-linear-gradient(-60deg, var(--gradient-color) 0, var(--gradient-color) 1px, transparent 1px, transparent 5px);
+                }
+
+                &.bottom {
+                    --gradient-color: var(--second-bg);
+                    background: repeating-linear-gradient(-60deg, var(--gradient-color) 0, var(--gradient-color) 1px, transparent 1px, transparent 5px);
+                }
+            }
+
+            >.top-area {
+                --gradient-color: var(--second-bg);
+                background: repeating-linear-gradient(-60deg, var(--gradient-color) 0, var(--gradient-color) 1px, transparent 1px, transparent 5px);
+            }
+
+            >.bottom-area {
+                --gradient-color: var(--first-bg);
+                background: repeating-linear-gradient(-60deg, var(--gradient-color) 0, var(--gradient-color) 1px, transparent 1px, transparent 5px);
+            }
+        }
+
+        .translation-screen-wrapper-inner {
+            transition: filter .2s;
+        }
+
+        .close-info-button {
+            position: absolute;
+            top: var(--half-safe-gap);
+            right: var(--half-safe-gap);
+            opacity: 0;
+            pointer-events: none;
+            cursor: pointer;
+        }
+
+        .open-info-button {
+            opacity: 1;
+            transition: opacity .4s;
+        }
+
+        >.info-area {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #0000;
+            cursor: pointer;
+        }
+
         >.bottom-area,
         >.top-area {
             position: absolute;
-            width: 40%;
-            height: 40%;
-            cursor: pointer;
+            width: var(--block-width);
+            height: var(--block-height);
 
             &.left {
                 left: var(--safe-gap);
@@ -173,44 +248,53 @@
         }
 
         >.center-area {
+            --over-position: calc(0px - var(--safe-gap) * 4);
+            --active-position: calc(0px - var(--safe-gap) / 2.5);
+            --active-second-position: calc(var(--safe-gap) / 1.5);
+
             position: absolute;
-            width: 20%;
-            left: 40%;
-            height: 40%;
-            cursor: pointer;
+            width: var(--center-width);
+            left: var(--center-left);
+            height: var(--block-height);
 
             &.top {
-                top: 0;
+                top: var(--safe-gap);
 
-                .close-translation-button {
-                    top: -50px;
+                .area-button {
+                    top: var(--over-position);
 
                     &.show {
-                        top: 10px;
+                        top: var(--active-position);
+
+                        &.second {
+                            top: var(--active-second-position);
+                        }
                     }
                 }
             }
 
             &.bottom {
-                bottom: 0;
+                bottom: var(--safe-gap);
 
-                .close-translation-button {
-                    bottom: -50px;
+                .area-button {
+                    bottom: var(--over-position);
 
                     &.show {
-                        bottom: 10px;
+                        bottom: var(--active-position);
                     }
                 }
             }
 
-            .close-translation-button {
-                --svg-color: white;
-
+            .area-button {
                 position: absolute;
                 transition: top .4s, bottom .4s;
                 left: calc(50% - 24px / 2);
                 cursor: pointer;
                 z-index: 10000;
+
+                &.second {
+                    transition: top .5s, bottom .5s, opacity .2s;
+                }
             }
         }
     }
