--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   --color--6: #d3e5d7;
   --color--7: #b5f2c8;
   --color--8: var(--color--5);
+  --color--ko: #ec6969;
 
   &.light-theme {
     --color--1: #eaf1e9;
@@ -105,6 +106,13 @@ input {
 
   &.column {
     flex-direction: column;
+  }
+}
+
+.text-middle {
+  >* {
+    display: inline-block;
+    vertical-align: middle;
   }
 }
 
