--- a/src/complect/modal/Modal.scss
+++ b/src/complect/modal/Modal.scss
@@ -1,7 +1,4 @@
-
 .app-modal-window {
-    --bgcolor-title: #eee;
-
     position: absolute;
     z-index: 300;
     display: flex;
@@ -10,7 +7,7 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    background: rgba(0,0,0,.2);
+    background: rgba(0, 0, 0, .2);
 
     ::-webkit-scrollbar {
         display: none;
@@ -23,15 +20,15 @@
         min-height: max-content;
         max-height: calc(100vh - 10px);
         max-width: calc(100vw - 10px);
-        border: solid 1px #ddd;
+        border: solid 1px var(--color--3);
         border-radius: 5px;
-        background-color: var(--color-ok-6);
+        background-color: var(--color--2);
 
         >.app-modal-title {
             display: flex;
             justify-content: space-between;
-            background-color: var(--bgcolor-title);
-            color: var(--color-primary);
+            background-color: var(--color--3);
+            color: var(--color--1);
             padding: 5px;
             max-height: 2em;
 
@@ -46,7 +43,7 @@
             max-height: calc(100vh - 5em);
             overflow-y: auto;
             overflow-x: hidden;
-            color: var(--color-ok-1);
+            color: var(--color--3);
 
             &.with-error {
                 max-height: calc(100% - 6.2em);
@@ -78,7 +75,6 @@
             >.app-modal-footer-button-list {
                 overflow-x: auto;
                 overflow-y: hidden;
-                height: 1.5em;
                 padding: 10px 5px;
 
                 >.app-modal-footer-button-list-inner {
@@ -86,15 +82,14 @@
                     white-space: nowrap;
 
                     >.app-modal-footer-button-list-item {
-                        border: solid 1px #999;
                         border-radius: 3px;
-                        background-color: #ccc;
+                        background-color: var(--color--3);
                         outline: none;
                         margin: 0 2px;
+                        cursor: pointer;
                     }
                 }
             }
         }
     }
 }
-
