--- a/src/components/apps/cm/editor/edit-container-corrects-informer/EditContainerCorrectsInformer.scss
+++ b/src/components/apps/cm/editor/edit-container-corrects-informer/EditContainerCorrectsInformer.scss
@@ -7,6 +7,7 @@
             margin: 15px 0;
             padding: 10px;
             border-radius: 10px;
+            white-space: pre-line;
 
             &.error {
                 color: red;
