--- a/src/components/index/parts/login/IndexLogin.scss
+++ b/src/components/index/parts/login/IndexLogin.scss
@@ -1,12 +1,96 @@
 .index-login {
-    .input-container {
-        >:not(input) {}
+    .logo {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
 
-        >input {
-            margin-left: 10px;
-            background-color: var(--color--1);
-            color: var(--text-color);
-            padding: .3em;
+        >.logo-container {
+            background-color: var(--color--3);
+            padding: 15px;
+            border-radius: 100%;
+
+            >.jesmyl-smile {
+                --jesmyl-smile-color: var(--color--2);
+            }
+        }
+
+        >.text {
+            font-size: 2em;
+            margin-top: .3em;
+        }
+    }
+
+    .input-container {
+        --padding-h: .8em;
+        position: relative;
+        width: 100%;
+        max-width: 500px;    
+        margin: 5px 0;
+
+        >.input-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 100%;
+
+            >input {
+                --autofill-background-color: var(--color--2);
+                --autofill-color: var(--text-color);
+
+                background-color: var(--color--2);
+                color: var(--text-color);
+                padding: 0.5em var(--padding-h);
+                width: 100%;
+                border-radius: 0.7em;
+                font-size: 1.5em;
+                border: var(--color--2) 2px solid;
+
+                &::placeholder {
+                    color: var(--text-color);
+                }
+            }
+
+            >.eva-icon {
+                position: absolute;
+                right: var(--padding-h);
+                cursor: pointer;
+            }
+        }
+    }
+
+    .send-button {
+        background-color: var(--color--3);
+        color: var(--color--2);
+        padding: .5em 2em;
+        font-size: 1.5em;
+        border-radius: 0.8em;
+        margin: 1.5em 0;
+        cursor: pointer;
+    }
+
+    .register-button {
+        border: var(--color--2) 4px solid;
+        padding: .5em 2em;
+        border-radius: 2em;
+        cursor: pointer;
+    }
+
+    .login-error-message {
+        position: absolute;
+        color: var(--color--ko);
+        bottom: -7px;
+        width: 100%;
+        text-align: center;
+
+        +.input-wrapper {
+            margin-bottom: 1em;
+
+            >input {
+                border-color: var(--color--ko);
+            }
+            >.eva-icon {
+                --svg-color: var(--color--ko);
+            }
         }
     }
 }
