--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -20,7 +20,7 @@
 
     .debounced-searcher {
         --height: calc(var(--header-container-height) - var(--main-gap) * 2);
-    
+
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -30,7 +30,7 @@
         background-color: var(--color--2);
         padding: var(--main-gap);
         width: 100%;
-    
+
         .input {
             width: calc(100% - 60px);
             outline: 0;
@@ -38,10 +38,10 @@
             background: none;
             color: var(--text-color);
         }
-    
+
         .clear-button {
             cursor: pointer;
-    
+
             &.hidden {
                 opacity: 0;
             }
@@ -72,6 +72,13 @@
 
 
     .roll-controled-container {
+        padding: 0;
+        transition: padding .3s;
+
+        &.fullscreen {
+            padding-top: 30%;
+        }
+
         .roll-controls {
             --height: 100px;
 
