--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,22 @@ body {
   color: var(--color--ko);
 }
 
+input[type='radio'] {
+  cursor: pointer;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.inline {
+  display: inline;
+}
+
+.block {
+  display: block;
+}
+
 .disabled {
   opacity: .5;
   pointer-events: none;
