cat titles fixed

--- a/src/components/apps/cm/col/cat/Cat.scss
+++ b/src/components/apps/cm/col/cat/Cat.scss
@@ -1,8 +1,5 @@
 .phase-container.cat-content {
-    .category-title,
-    .later-title {
-        background-color: var(--current-bg);
-        padding: var(--main-gap);
+    .list-title {
         cursor: ns-resize;
     }
     
