input default style fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -87,6 +87,12 @@ input[type='radio'] {
 input {
   font-size: 1em;
   font-family: var(--font-family);
+  background-color: var(--color--2);
+  color: var(--text-color);
+
+  &::placeholder {
+    color: var(--color--5);
+  }
 }
 
 .half-width {
@@ -238,7 +244,7 @@ input:-webkit-autofill:active {
   --autofill-background-color: var(--color--2);
   --autofill-color: var(--text-color);
 
-  -webkit-box-shadow: 0 0 0 30px var(--autofill-background-color) inset !important;
+  box-shadow: 0 0 0 30px var(--autofill-background-color) inset !important;
   -webkit-text-fill-color: var(--autofill-color);
   font-size: 1em;
 }
