--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -22,6 +22,10 @@
         padding: var(--main-big-gap);
     }
 
+    .padding-gap {
+        padding: var(--main-gap);
+    }
+
     .margin-big-gap {
         margin: var(--main-big-gap);
     }
