removed unnecessary app-container wrapper

--- a/src/components/apps/cm/col/com/block-styles/BlockStyles.scss
+++ b/src/components/apps/cm/col/com/block-styles/BlockStyles.scss
@@ -1,4 +1,4 @@
-.app-container.cm {
+.application-container.app_cm {
     --margin-left-small: .5em;
     --margin-left-medium: 1em;
     --margin-left-large: 1.5em;
