swipeable container corrects

--- a/src/index.scss
+++ b/src/index.scss
@@ -116,6 +116,14 @@ textarea {
   height: 100%;
 }
 
+.full-min-width {
+  min-width: 100%;
+}
+
+.full-min-height {
+  min-height: 100%;
+}
+
 .half-height {
   height: 50%;
 }
