start translation button big width

--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -113,6 +113,10 @@
             color: var(--color--4);
             cursor: pointer;
 
+            &.center{
+                min-width: 40vw;
+            }
+
             +.button {
                 margin-left: 10px;
             }
