--- a/src/components/apps/cm/col/com/block-styles/BlockStyles.scss
+++ b/src/components/apps/cm/col/com/block-styles/BlockStyles.scss
@@ -27,6 +27,9 @@
     }
 
     .styled-block {
+        &.chords-block {
+            margin-left: .5em;
+        }
 
         &.chorded-block {
             .composition-line {
