--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,4 +1,4 @@
-.application-container {
+.above-container {
     --main-gap: 8px;
     --main-big-gap: 18px;
     --header-padding-top: 23px;
@@ -6,17 +6,22 @@
     --header-content-height: 50px;
     --footer-height: 70px;
     --fullscreen-transition: top .3s, bottom .3s, height .3s, margin-top .3s;
-    --header-top: 0;
+    --header-top: 0px;
     --header-height: calc(var(--header-padding-top) + var(--header-content-height));
-    --footer-bottom: 0;
-    --content-height: calc(100vh - var(--header-height) - var(--footer-height));
+    --footer-bottom: 0px;
+    --content-height: calc(100vh - var(--header-height) - var(--footer-height) - var(--keyboard-flash-height));
     --content-top: var(--header-content-height);
+    --keyboard-flash-height: 0px;
+    --footer-opacity: 1;
 
-    position: absolute;
-    top: 0;
+    --keyboard-flash-background: var(--color--2);
+    --keyboard-flash-selected-background: var(--color--3);
+    --keyboard-flash-selected-color: var(--color--1);
+    --keyboard-flash-tool-button-background: var(--color--1);
+    --keyboard-flash-color: var(--text-color);
+
     overflow: hidden;
-    height: 100%;
-    width: 100%;
+
 
     .padding-big-gap {
         padding: var(--main-big-gap);
@@ -54,61 +59,78 @@
         margin-right: var(--main-gap);
     }
 
-    .collapse-fullscreen-button {
-        position: absolute;
-        top: -40px;
-        right: 0;
-        margin: 10px;
-        transition: top .2s;
-        z-index: 50;
+
+    &.keyboard-open {
+        --keyboard-flash-height: 30vh;
+        --footer-height: 0px;
+        --footer-opacity: 0;
     }
 
-    &.fullscreen-mode {
-        --header-top: calc(0px - var(--header-height));
-        --header-container-top: calc(0px - var(--header-content-height));
-        --footer-bottom: calc(0px - var(--footer-height));
-        --content-height: 100vh;
-        --content-top: 0;
+    .application-container {
+        position: absolute;
+        top: 0;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
 
         .collapse-fullscreen-button {
-            top: 0;
+            position: absolute;
+            top: -40px;
+            right: 0;
+            margin: 10px;
+            transition: top .2s;
+            z-index: 50;
         }
-    }
 
-    >.footer {
-        position: absolute;
-        z-index: 200;
-        bottom: var(--footer-bottom);
-        width: 100vw;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        background-color: var(--color--1);
-        height: var(--footer-height);
-        transition: var(--fullscreen-transition);
+        &.fullscreen-mode {
+            --header-top: calc(0px - var(--header-height));
+            --header-container-top: calc(0px - var(--header-content-height));
+            --footer-bottom: calc(0px - var(--footer-height));
+            --content-height: 100vh;
+            --content-top: 0;
 
-        >.footer-item {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            width: 25%;
-            cursor: pointer;
-
-            >.icon-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 24px;
-                height: 30px;
-                border-radius: 30px;
-                transition: width .1s, background-color .05s;
+            .collapse-fullscreen-button {
+                top: 0;
             }
+        }
 
-            &.active {
+        >.footer {
+            position: absolute;
+            z-index: 200;
+            bottom: var(--footer-bottom);
+            width: 100vw;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background-color: var(--color--1);
+            height: var(--footer-height);
+            transition: var(--fullscreen-transition);
+            overflow: hidden;
+            opacity: var(--footer-opacity);
+
+            >.footer-item {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                width: 25%;
+                cursor: pointer;
+
                 >.icon-container {
-                    width: 50px;
-                    background-color: var(--color--2);
-                    color: var(--color--3);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 24px;
+                    height: 30px;
+                    border-radius: 30px;
+                    transition: width .1s, background-color .05s;
+                }
+
+                &.active {
+                    >.icon-container {
+                        width: 50px;
+                        background-color: var(--color--2);
+                        color: var(--color--3);
+                    }
                 }
             }
         }
