--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,11 @@ body {
     --color--7: #336a4a;
     --color--8: #fbfdf8;
   }
+
+  #root {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 body {
