--- a/src/complect/keyboard/Keyboard.scss
+++ b/src/complect/keyboard/Keyboard.scss
@@ -5,23 +5,32 @@
     flex-direction: column;
     bottom: 0;
     width: 100%;
-    height: var(--keyboard-flash-height);
+    height: 0;
     z-index: 1000000000000;
     overflow: hidden;
     transition: height .2s;
     background: var(--keyboard-flash-background);
 
-    &.inactive {
-        height: 0;
+    &.active {
+        height: var(--keyboard-flash-height);
     }
 
     >.keyboard-flash-line {
         display: flex;
         justify-content: space-around;
+        height: 100%;
+
+        &:not(.bottom-line) {
+
+            >.keyboard-flash-key:not(.writable) {
+                min-width: 35px;
+            }
+        }
 
         >.keyboard-flash-key {
             display: flex;
             justify-content: center;
+            align-items: center;
             padding: .2em;
             border-radius: .2em;
             cursor: pointer;
@@ -34,17 +43,37 @@
                 min-width: 1.5em;
             }
 
-            &.shift-key {
-                opacity: 1;
+            >.key-button {
+                background: var(--keyboard-flash-tool-button-background);
+                padding: .2em;
+                border-radius: .2em;
+            }
 
-                &.caps-lock {
+            &.shift-key {
+                position: relative;
+
+                >.key-button {
+                    opacity: 1;
+                }
+
+                &.caps-lock>.key-button {
                     opacity: .5;
+                }
+
+                >.is-control-key-label {
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    font-size: .5em;
                 }
             }
 
-            &:not(.writable) {
-                background: var(--keyboard-flash-tool-button-background);
+            &.writable {
+                width: 100%;
+                height: 100%;
+            }
 
+            &:not(.writable) {
                 &.key-in-fix {
                     opacity: .5;
                 }
@@ -56,6 +85,14 @@
 
             &.space-key {
                 width: 50%;
+
+                >* {
+                    width: 100%;
+                    height: 30px;
+                    background: var(--keyboard-flash-tool-button-background);
+                    padding: .2em;
+                    border-radius: .2em;
+                }
             }
         }
     }
@@ -63,6 +100,7 @@
 
 .input-keyboard-flash-controlled {
     --cursor-animation: cursor .4s infinite alternate-reverse;
+    --cursor-border: 1px solid transparent;
     position: relative;
     cursor: text;
     width: 100%;
@@ -102,6 +140,18 @@
     &.empty-input {
         overflow: hidden;
 
+        &.no-lines {
+            .input-keyboard-flash-controlled-char-list {
+                height: 1.3em;
+                border-left: var(--cursor-border);
+                ;
+
+                .input-keyboard-flash-controlled-char-list-line {
+                    height: 1.3em;
+                }
+            }
+        }
+
         &:before {
             content: attr(placeholder);
             position: absolute;
@@ -116,9 +166,18 @@
     }
 
     &.focused {
+        &.empty-input {
+            overflow: hidden;
+
+            &.no-lines {
+                .input-keyboard-flash-controlled-char-list {
+                    animation: var(--cursor-animation);
+                }
+            }
+        }
+
         .input-keyboard-flash-controlled-char-list {
             .input-keyboard-flash-controlled-char-list-inner {
-                // height: 1.3em;
 
                 .input-keyboard-flash-controlled-char-list-line {
                     &.zero-cursor {
@@ -155,8 +214,18 @@
         }
 
         >* {
-            margin: .3em;
+            padding: .3em;
             cursor: pointer;
+
+            &:not(:last-child):after {
+                content: "";
+                top: 0.4em;
+                margin-left: 3px;
+                height: 1.2em;
+                position: absolute;
+                border-left: solid 1px var(--keyboard-flash-selected-color);
+                display: inline-block;
+            }
         }
     }
 
@@ -171,15 +240,14 @@
 
             .input-keyboard-flash-controlled-char-list-line {
                 height: 1.3em;
-                border-left: 1px solid transparent;
+                border-left: var(--cursor-border);
 
                 .input-keyboard-flash-controlled-char {
                     position: relative;
                     display: inline-block;
                     margin-left: -1px;
                     white-space: pre;
-                    border-right: 1px solid transparent;
-                    pointer-events: none;
+                    border-right: var(--cursor-border);
 
                     &.newline-char {
                         display: block;
@@ -193,7 +261,6 @@
                         width: .5em;
                         height: 1.4em;
                         left: -.2em;
-                        pointer-events: all;
                     }
 
                     &:first-child {
