--- a/src/components/index/parts/login/IndexLogin.scss
+++ b/src/components/index/parts/login/IndexLogin.scss
@@ -33,7 +33,7 @@
             align-items: center;
             width: 100%;
 
-            >input {
+            >.input {
                 --autofill-background-color: var(--color--2);
                 --autofill-color: var(--text-color);
 
@@ -44,6 +44,7 @@
                 border-radius: 0.7em;
                 font-size: 1.5em;
                 border: var(--color--2) 2px solid;
+                height: 60px;            
 
                 &::placeholder {
                     color: var(--text-color);
