--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,8 @@ body {
   color: var(--color--ko);
 }
 
-input[type='radio'] {
+input[type='radio'],
+input[type='button'] {
   cursor: pointer;
 }
 
