some style fixes

--- a/src/complect/modal/Modal.scss
+++ b/src/complect/modal/Modal.scss
@@ -84,6 +84,7 @@
                     >.app-modal-footer-button-list-item {
                         border-radius: 3px;
                         background-color: var(--color--3);
+                        color: var(--color--1);
                         outline: none;
                         margin: 0 2px;
                         cursor: pointer;
